# wamukap

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini  wamukap.toml
.github/workflows/: python-app.yml  python-wheel.yml
contrib/: wamukap-consumer.service  wamukap-producer.service  wamukap.spec
tests/: test_consumer.py  test_producer.py
wamukap/common/: config.py  kafka.py  kafka_util.py  monitor_result.py  utils.py
wamukap/consumer/: __init__.py  __main__.py
wamukap/producer/: __init__.py  __main__.py
