[metadata]
name = wamukap
version = 0.0.1
author = Ralf Haferkamp
author_email = ralf@h4kamp.de
description = Website Availability Monitor using Kafka and PostgreSQL
long_description = file: README.rst
url = https://github.com/rhafer/wamukap
project_urls =
    Bug Tracker = https://github.com/rhafer/wamukap/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License 
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    aiopg
    aiokafka
    aiohttp
    toml
include_package_data = True

[options.extras_require]
test =
    aioresponses
    coverage 
    flake8
    pytest
    pytest-asyncio

[options.entry_points]
console_scripts =
    wamukap-producer = wamukap.producer:producer
    wamukap-consumer = wamukap.consumer:consumer
